--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,3 +1,4 @@
-<div class="container-fluid">
-
+<h1>Hi {{currentUser.firstName}}!</h1>
+<p>You're logged in </p>
+<h3>All registered users:</h3>
 </div>
