--- a/src/app/components/shared/layout/nav/nav.component.html
+++ b/src/app/components/shared/layout/nav/nav.component.html
@@ -16,5 +16,8 @@
         <li>
             <a class="nav-link">Events</a>
         </li>
+        <!-- <li>
+            <a *ngIf="isLoggedIn" (click)="authService.Logout()" class="nav-link">Logout</a>
+        </li> -->
     </ul>
 </nav>
