--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,4 +1,3 @@
-<h1>Hi {{currentUser.firstName}}!</h1>
-<p>You're logged in </p>
-<h3>All registered users:</h3>
-</div>
+<h1>Home Page Here</h1>
+<button (click)="create()">create</button>
+{{message}}
