--- a/src/app/components/pages/chat/chat-room/ChatRoom.component.html
+++ b/src/app/components/pages/chat/chat-room/ChatRoom.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="d-flex justify-content-center">
     <button class="m-2" id="sendButton" (click)="sendMessage()">Send</button>
-    <input class="m-2" type=text id="textInput" [(ngModel)]="messageContent" placeholder="Enter your text" />
+    <input class="m-2" type="text" (keyup)="onKey($event)" placeholder="Enter your text" />
   </div>
 </div>
 
