--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,14 @@
 
 .baige {
-  background-color: #EBE6E3;
+  background-color: #ebe6e3;
+}
+
+.orange{
+  background-color: #F47D4A;
+}
+
+.grey {
+  background-color: #DDD1CC
 }
 
 .black {
