--- a/src/app/shared/components/chat-room/chat-room.component.html
+++ b/src/app/shared/components/chat-room/chat-room.component.html
@@ -1,15 +1,14 @@
-
-<div class="container">
-  
-  <div class="d-flex justify-content-center chat-box">
-    <ul class="w-75 overflow-auto">
+<div class="d-flex justify-content-center mt-3">
+  <h2>Chat Room</h2>
+</div>
+<div class="container-fluid orange ">
+  <div class="d-flex justify-content-center ">
+    <ul class="w-50 overflow-auto chat-box">
       <div *ngFor="let message of recivedMessages">{{message}}</div>
     </ul>
   </div>
-  <div class="d-flex justify-content-center fixed-bottom mb-5 pb-5">
+  <div class="d-flex justify-content-center">
     <button class="m-2" id="sendButton" (click)="sendMessage()">Send</button>
     <input class="m-2" type="text" (keyup)="onKey($event)" placeholder="Enter your text" />
   </div>
 </div>
-
-
