--- a/src/app/shared/components/choose-room/join-room.component.html
+++ b/src/app/shared/components/choose-room/join-room.component.html
@@ -1,8 +1,23 @@
-<div class="container">
-  <div class="m-5 d-flex justify-content-center">
-    <select [(ngModel)]="selectedRoom"> 
-      <option  *ngFor="let room of rooms" [value]="room.id" [innerHTML]="room.label" ></option>
-   </select>
-    <button (click)="joinRoom()">Join</button>
-  </div>
+<div class="container mt-5" >
+<div class="d-flex justify-content-center">
+  <form class="w-25" [formGroup]="roomForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="input-email">Room name</label>
+      <input class="form-control" formControlName="roomName" placeholder="E.g 'The Cool room'">
+    </div>
+    <div class="form-group d-flex justify-content-between">
+      <button type="submit" class="btn btn-primary">Create Room</button>
+      <div class="dropdown align-selt-end">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Join Room
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <li *ngFor="let room of rooms">
+            <a class="dropdown-item" href="chat/{{room.roomId}}">{{room.name}}</a>
+          </li>
+        </div>
+      </div>
+    </div>
+  </form>
 </div>
