--- a/src/app/shared/components/login/Login.component.html
+++ b/src/app/shared/components/login/Login.component.html
@@ -1,25 +1,22 @@
-
-<div class="container">
-  <form [formGroup]="form" (ngSubmit)=onSubmit()>
-    <fieldset>
-      <legend>Login</legend>
-      <div>
-        <label>Username</label>
-        <input type="text" formControlName="username" name="username">
-        <div *ngIf="form.controls['username'].hasError('required') 
-        && form.controls['username'].touched"> Please enter username</div>
-      </div>
-      <div>
-        <label>Password</label>
-        <input type="password" formControlName="password" name="password">
-        <div *ngIf="form.controls['password'].hasError('required') 
-        && form.controls['password'].touched"> Please enter password</div>
-      </div>
-    </fieldset>
-    <div class="from-buttons">
-      <button class="button button-primary" [disabled]="form.invalid">Login</button>
-      <div *ngIf="invalidLogin">Invalid Username or Password. Please try again</div>
+<div class="d-flex justify-content-center mt-5 ">
+  <h2>Login</h2>
+</div>
+<div class="d-flex justify-content-center">
+  <div class="alert alert-danger mt-3 mb-3" *ngIf="invalidDetails"  ng-reflect-ng-class="alert alert-danger">Username or password is incorrect</div>
+</div>
+<div class="d-flex justify-content-center">
+  <form class="w-25" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="input-email">Username</label>
+      <input type="username" class="form-control" formControlName="username" placeholder="Enter Username">
+    </div>
+    <div class="form-group">
+      <label for="input-password">Password</label>
+      <input type="password" class="form-control" formControlName="password" placeholder="Enter Password">
+    </div>
+    <div class="d-flex justify-content-between">
+      <button type="submit" class="btn btn-primary m-1">Submit</button>
+      <button type="submit" class="btn btn-primary m-1">Regsiter</button>
     </div>
   </form>
 </div>
-
