--- a/src/app/shared/components/messaging/chat-room/chat-room.component.html
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.html
@@ -4,7 +4,10 @@
 <div class="container-fluid orange ">
   <div class="d-flex justify-content-center ">
     <ul class="w-50 overflow-auto chat-box">
-      <div *ngFor="let message of recivedMessages">{{message}}</div>
+      <div *ngFor='let item of dataPackets | orderBy:eventData.timestamp'>
+          <app-message [dataPacket]="item"></app-message>
+  
+      </div>
     </ul>
   </div>
   <div class="d-flex justify-content-center">
