--- a/src/app/shared/components/messaging/chat-room/chat-room.component.html
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.html
@@ -4,9 +4,8 @@
 <div class="container-fluid orange ">
   <div class="d-flex justify-content-center ">
     <ul class="w-50 overflow-auto chat-box">
-      <div *ngFor='let item of dataPackets'>
-          <app-message [dataPacket]="item"></app-message>
-  
+      <div *ngFor='let message of messages'>
+          <app-message [message]="message"></app-message>
       </div>
     </ul>
   </div>
