--- a/src/app/shared/components/messaging/message/message.component.css
+++ b/src/app/shared/components/messaging/message/message.component.css
@@ -1,17 +1,30 @@
+
 .msg-container{
     margin-left: 10px;
     border-radius: 25px;
     padding: 10px;
     position: relative;
-    color: #F5F2F1;
+    color:white;
+    background-color: #F47D4A;
 }
 
 .msg-container-sent{
-    margin-left: 10px;
+    margin-right: 10px;
     border-radius: 25px;
     padding: 10px;
     position: relative;
-    color: black;
+    color:white;
+    background-color: #010101;
+}
+
+.msg-time-sent{
+    position: absolute;
+    right: 4px;
+    bottom: -15px;
+    color: #010101;
+    font-size: 10px;
+    min-width: 200px;
+    text-align: right;
 }
 
 .msg-time{
@@ -21,10 +34,4 @@
     color: #010101;
     font-size: 10px;
     min-width: 200px;
-}
-
-.img-container img {
-    border-radius: 100%;
-    height: 45px;
-    width: 45px;
 }
