--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,16 +1,24 @@
-
-
-<nav class="navbar navbar-expand-lg white">
-    <img [ngClass]="{'login' : !isLoggedIn , 'nav': isLoggedIn }" src="assets/img/SEB-Logo.png"><img>
-    <ul *ngIf="isLoggedIn" class="navbar-nav">
-        <li>
-            <a class="nav-link" href="Profile">Profile</a>
-        </li>
-        <li>
-            <a class="nav-link" href=room>Chat</a>
-        </li>
-        <li>
-            <a href="login" (click)="authService.logout()" class="nav-link">Logout</a>
-        </li>
-    </ul>
+<nav class="navbar sticky-top navbar-expand-lg white d-flex justify-content-center">
+    <div class="d-flex justify-content-center">
+        <a class="navbar-brand" href="#">
+            <img src="assets/img/SEB-Logo.png"><img>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="Profile">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href=room>Chat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login" (click)="authService.logout()" class="nav-link">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
