--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,4 +1,5 @@
 <div class="p-2 d-flex justify-content-center white">
-  <app-nav></app-nav>
+  <img *ngIf="!isLoggedIn" src="assets/img/SEB-Logo.png"><img>
+  <app-nav *ngIf="isLoggedIn"></app-nav>
 </div>
-<div class="banner black"></div >
+<div class="banner black"></div>
