--- a/src/app/shared/components/messaging/chat-room/chat-room.component.css
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.css
@@ -1,8 +1,12 @@
 
 .chat-box{
-    height: 800px;
+    height: 700px;
     background-color: white;
-    border-radius: 10%;
+}
+
+.chat-list{
+    height: 700px;
+    
 }
 
 .input-messaage {
