--- a/src/app/shared/components/messaging/chat-room/chat-room.component.html
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.html
@@ -1,18 +1,16 @@
 <div class="d-flex justify-content-center mt-2">
-  <h2>TMS Messenger</h2>
+  <h2>Room</h2>
 </div>
 <div class="container-fluid mt-2">
-  <div class="d-flex justify-content-center" >
-    <ol class="w-50 overflow-auto chat-box shadow p-5"
-    infiniteScroll
-    [scrollWindow]="false"
-    [infiniteScrollDistance]="2"
-    [infiniteScrollThrottle]="50"
-    (scrolledUp)="onScroll()">
-      <div *ngFor='let message of messages'>
-        <app-message [message]="message"></app-message>
+  <div class="d-flex justify-content-center">
+    <div class="w-50 chat-box shadow ">
+      <div  #scrollBar class="chat-list ml-5 mr-5 overflow-auto" infiniteScroll [scrollWindow]="false" [infiniteScrollUpDistance]="2"
+        [infiniteScrollThrottle]="1000" (scrolledUp)="onScroll()" ngx-auto-scroll lock-y-offset="0" observe-attributes >
+        <div *ngFor='let message of messages'>
+          <app-message [message]="message"></app-message>
+        </div>
       </div>
-    </ol>
+    </div>
   </div>
   <div class="d-flex justify-content-center">
     <form class="w-50" [formGroup]="messageForm" (ngSubmit)="sendMessage()">
