--- a/src/app/shared/components/messaging/chat-room/chat-room.component.css
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.css
@@ -30,9 +30,35 @@
 }
 
 .field1{
-    width: 90%;
+    width: 20%;
 }
 
 .field2{
-    width: 10%;
+    width: 60%;
 }
+
+.field3{
+    width: 20%;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+  }
+  
+  .btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+  }
