--- a/src/app/shared/components/messaging/chat-room/chat-room.component.html
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.html
@@ -1,11 +1,15 @@
 <div class="d-flex justify-content-center mt-2">
   <h2>Room</h2>
 </div>
+<div class="d-flex justify-content-center mt-2">
+  <h2 *ngIf="connectionLost">Connection Lost</h2>
+</div>
 <div class="container-fluid mt-2">
   <div class="d-flex justify-content-center">
     <div class="w-50 chat-box shadow ">
-      <div  #scrollBar class="chat-list ml-5 mr-5 overflow-auto" infiniteScroll [scrollWindow]="false" [infiniteScrollUpDistance]="2"
-        [infiniteScrollThrottle]="1000" (scrolledUp)="onScroll()" ngx-auto-scroll lock-y-offset="0" observe-attributes >
+      <div #scrollBar class="chat-list pl-5 pr-5 pt-5 pb-0 overflow-auto" infiniteScroll [scrollWindow]="false"
+        [infiniteScrollUpDistance]="2" [infiniteScrollThrottle]="500" (scrolledUp)="onScroll()" ngx-auto-scroll
+        lock-y-offset="0" observe-attributes>
         <div *ngFor='let message of messages'>
           <app-message [message]="message"></app-message>
         </div>
@@ -16,9 +20,14 @@
     <form class="w-50" [formGroup]="messageForm" (ngSubmit)="sendMessage()">
       <div class="d-flex justify-content-between align-items-center w-100 chat-input shadow-lg">
         <div class="field1">
-          <input type="text" class="chat-input-box" formControlName="messageBox" placeholder="..." />
+          <span class="btn btn-dark btn-file">
+            Photos<input type="file" (change)="onFileSelected($event)">
+          </span>
         </div>
         <div class="field2">
+          <input type="text" class="chat-input-box" formControlName="messageBox" placeholder="..." />
+        </div>
+        <div class="field3">
           <button class="btn btn-dark w-100" type="submit">Send</button>
         </div>
       </div>
