--- a/src/app/shared/components/messaging/message/message.component.css
+++ b/src/app/shared/components/messaging/message/message.component.css
@@ -27,6 +27,31 @@
     text-align: right;
 }
 
+.msg-name-sent{
+    position: absolute;
+    right: 12px;
+    top: -30px; 
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: #010101;
+    font-size: 15px;
+    min-width: 100px;
+    text-align: right;
+}
+
+.msg-name{
+    position: absolute;
+    left: 12px;
+    top: -30px; 
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: #010101;
+    font-size: 15px;
+    min-width: 100px;
+    text-align: left;
+}
+
+
 .msg-time{
     position: absolute;
     left: 4px;
