--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar sticky-top navbar-expand-lg white d-flex justify-content-center">
+<nav class="navbar sticky-top navbar-expand-md white d-flex justify-content-center">
     <div class="d-flex justify-content-center">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" [routerLink]="[home]">
             <img src="assets/img/SEB-Logo.png"><img>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="Profile">Profile</a>
+                    <a class="nav-link" routerLink="/Profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href=room>Chat</a>
+                    <a class="nav-link" routerLink="/room">Chat</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login" (click)="authService.logout()" class="nav-link">Logout</a>
+                    <a class="nav-link" routerLink="/login" (click)="authService.logout()" class="nav-link">Logout</a>
                 </li>
             </ul>
         </div>
