--- a/src/app/shared/components/messaging/message/message.component.html
+++ b/src/app/shared/components/messaging/message/message.component.html
@@ -1,9 +1,7 @@
-
-
-<div *ngIf="message && sentByUser" class="d-flex justify-content-start mb-4 ">
+<div *ngIf="message.type == 0  && sentByUser" class="d-flex justify-content-start mb-4 ">
   <div class="d-flex align-items-center pb-3">
     <div class="img-container">
-      <img src={{imagePath}}/>
+      <img src={{imagePath}} />
     </div>
     <div class="msg-container">
       <span class="msg-name">{{message.user.username}}</span>
@@ -14,7 +12,7 @@
     </div>
   </div>
 </div>
-<div *ngIf="message && !sentByUser" class="d-flex justify-content-end mb-4 ">
+<div *ngIf="message.type == 0 && !sentByUser" class="d-flex justify-content-end mb-4 ">
   <div class="d-flex align-items-center pb-3">
     <div class="msg-container-sent">
       <span class="msg-name-sent">{{message.user.username}}</span>
@@ -24,9 +22,19 @@
       <span class="msg-time-sent">{{message.sentAt | date:'short'}}</span>
     </div>
     <div class="img-container">
-      <img src={{imagePath}}/>
+      <img src={{imagePath}} />
     </div>
   </div>
+</div>
+
+<div *ngIf="message && message.type == 1" class="d-flex justify-content-start mb-4 ">
+  <span class="">{{message.user.username}}</span>
+  <div class="p-3 img-container">
+    <a>
+      <img class="img-chat" [src]="message.content| authImage | async"/>
+    </a>
+  </div>
+  <span class="">{{message.sentAt | date:'short'}}</span>
 </div>
 
 <!-- ng if video sent -->
