--- a/src/app/shared/components/messaging/chat-room/chat-room.component.html
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.html
@@ -21,7 +21,7 @@
       <div class="d-flex justify-content-between align-items-center w-100 chat-input shadow-lg">
         <div class="field1">
           <span class="btn btn-dark btn-file">
-            Photos<input type="file" (change)="onFileSelected($event)">
+            Photos<input type="file" accept="image/*" (change)="onFileSelected($event)">
           </span>
         </div>
         <div class="field2">
