Multiple observables per room. Not working yet

--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-md white d-flex justify-content-center">
     <div class="d-flex justify-content-center">
-        <a class="navbar-brand" [routerLink]="[home]">
+        <a class="navbar-brand" routerLink="/home">
             <img src="assets/img/SEB-Logo.png"><img>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
