--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,3 +1,3 @@
-<div class="d-flex justify-content-center align-items-center home">
-    <h1>Home Page Here</h1>
+<div class="d-flex justify-content-center">
+    <app-recent-chat-rooms></app-recent-chat-rooms>
 </div>
