--- a/src/app/shared/components/messaging/chat-room-preview/chat-room-preview.component.html
+++ b/src/app/shared/components/messaging/chat-room-preview/chat-room-preview.component.html
@@ -1,9 +1,10 @@
-<div *ngIf="message" class="chat_list active_chat">
+<div  class="chat_list active_chat">
   <div class="chat_people">
     <div class="chat_ib">
       <h5>Room {{room.roomId}}</h5>
-      {{message.content}}
+      <div *ngIf="message">
+        {{message.content}}
+      </div>
     </div>
   </div>
 </div>
-{{test}}
