--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" routerLink="/room">Chat</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/login" (click)="authService.logout()" class="nav-link">Logout</a>
+                    <a class="nav-link" routerLink="/login" (click)="logout()" class="nav-link">Logout</a>
                 </li>
             </ul>
         </div>
