--- a/src/app/shared/components/messaging/chat-room-preview/chat-room-preview.component.html
+++ b/src/app/shared/components/messaging/chat-room-preview/chat-room-preview.component.html
@@ -1,10 +1,6 @@
-<div  class="chat_list active_chat">
-  <div class="chat_people">
-    <div class="chat_ib">
-      <h5>Room {{room.roomId}}</h5>
-      <div *ngIf="message">
-        {{message.content}}
-      </div>
-    </div>
+<div *ngIf="message && room" class="d-flex bd-highlight p-2" >
+  <div class="user_info">
+    <span>{{room.name}}</span>
+    <div>{{message.content}}</div>
   </div>
 </div>
