--- a/src/app/shared/components/messaging/chat-room/chat-room.component.html
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.html
@@ -1,12 +1,12 @@
-<div class="d-flex justify-content-center mt-2">
+<div class="d-flex justify-content-center ">
   <h2>Room</h2>
 </div>
-<div class="d-flex justify-content-center mt-2">
+<div class="d-flex w-100 ">
   <h2 *ngIf="connectionLost">Connection Lost</h2>
 </div>
 <div class="container-fluid mt-2">
-  <div class="d-flex justify-content-center">
-    <div class="w-50 chat-box shadow ">
+  <div class="d-flex ">
+    <div class="w-100 chat-box shadow ">
       <div #scrollBar class="chat-list pl-5 pr-5 pt-5 pb-0 overflow-auto" infiniteScroll [scrollWindow]="false"
         [infiniteScrollUpDistance]="2" [infiniteScrollThrottle]="500" (scrolledUp)="onScroll()" ngx-auto-scroll
         lock-y-offset="0" observe-attributes>
@@ -16,8 +16,8 @@
       </div>
     </div>
   </div>
-  <div class="d-flex justify-content-center">
-    <form class="w-50" [formGroup]="messageForm" (ngSubmit)="sendMessage()">
+  <div class="d-flex ">
+    <form class="w-100" [formGroup]="messageForm" (ngSubmit)="sendMessage()">
       <div class="d-flex justify-content-between align-items-center w-100 chat-input shadow-lg">
         <div class="field1">
           <span class="btn btn-dark btn-file">
