--- a/src/app/shared/components/messaging/recent-chat-rooms/recent-chat-rooms.component.html
+++ b/src/app/shared/components/messaging/recent-chat-rooms/recent-chat-rooms.component.html
@@ -1,2 +1,14 @@
-<app-chat-room-preview *ngFor="let recentRoom of recentRooms" [room]="recentRoom"></app-chat-room-preview> 
+<div class="card mb-sm-3 mb-md-0 contacts_card">
+    <div class="card-header">
+      <div class="input-group">
+        <input type="text" placeholder="Search..." [ngModel]='model' (ngModelChange)='changed($event)'  class="form-control search">
+      </div>
+    </div>
+    <div class="card-body contacts_body">
+        <div *ngFor="let room of rooms" (click)="selectRoom(room)">
+            <app-chat-room-preview [room]="room"></app-chat-room-preview> 
+        </div>
+    </div>
+  </div>
+
 
