--- a/src/app/shared/components/messaging/chat-room/chat-room.component.html
+++ b/src/app/shared/components/messaging/chat-room/chat-room.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center ">
-  <h2>Room</h2>
+  <h2>{{room.name}}</h2>
 </div>
 <div class="d-flex w-100 ">
   <h2 *ngIf="connectionLost">Connection Lost</h2>
