--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-md white d-flex justify-content-center">
     <div class="d-flex justify-content-center">
-        <a class="navbar-brand" routerLink="/home">
+        <a class="navbar-brand" routerLink="/chat">
             <img src="assets/img/SEB-Logo.png"><img>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -10,10 +10,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/Profile">Profile</a>
+                    <a class="nav-link" routerLink="/chat">My Rooms</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/room">Chat</a>
+                    <a class="nav-link" routerLink="/room">Rooms</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/login" (click)="logout()" class="nav-link">Logout</a>
