--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex justify-content-center mt-5 ">
-  <h2>Login</h2>
+  <h2>Register</h2>
 </div>
 <div class="d-flex justify-content-center">
-  <div class="alert alert-danger mt-3 mb-3" *ngIf="invalidDetails"  ng-reflect-ng-class="alert alert-danger">Username or password is incorrect</div>
+  <div class="alert alert-danger mt-3 mb-3" *ngIf="invalidDetails"  ng-reflect-ng-class="alert alert-danger">{{errMessage}}</div>
 </div>
 <div class="d-flex justify-content-center">
-  <form class="w-25" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <form class="w-25" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="input-email">Username</label>
       <input type="username" class="form-control" formControlName="username" placeholder="Enter Username">
@@ -15,8 +15,7 @@
       <input type="password" class="form-control" formControlName="password" placeholder="Enter Password">
     </div>
     <div class="d-flex justify-content-between">
-      <button type="submit" class="btn btn-primary m-1">Submit</button>
-      <button type="button" routerLink="/register" class="btn btn-primary m-1">Register</button>
+      <button type="submit" class="btn btn-primary m-1">Register</button>
     </div>
   </form>
 </div>
