--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="p-2 d-flex justify-content-center white">
-  <img *ngIf="!isLoggedIn" src="assets/img/SEB-Logo.png"><img>
+  <img id="img-logo" *ngIf="!isLoggedIn" src="assets/img/SEB-Logo.png"><img>
   <app-nav *ngIf="isLoggedIn"></app-nav>
 </div>
 <div class="banner black"></div>
