--- a/src/app/shared/components/login/Login.component.html
+++ b/src/app/shared/components/login/Login.component.html
@@ -2,21 +2,21 @@
   <h2>Login</h2>
 </div>
 <div class="d-flex justify-content-center">
-  <div class="alert alert-danger mt-3 mb-3" *ngIf="invalidDetails"  ng-reflect-ng-class="alert alert-danger">Username or password is incorrect</div>
+  <div id="alert-invalid" class="alert alert-danger mt-3 mb-3" *ngIf="invalidDetails"  ng-reflect-ng-class="alert alert-danger">Username or password is incorrect</div>
 </div>
 <div class="d-flex justify-content-center">
   <form class="w-25" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="input-email">Username</label>
-      <input type="username" class="form-control" formControlName="username" placeholder="Enter Username">
+      <label for="input-username">Username</label>
+      <input id="input-username" type="username" class="form-control" formControlName="username" placeholder="Enter Username">
     </div>
     <div class="form-group">
       <label for="input-password">Password</label>
-      <input type="password" class="form-control" formControlName="password" placeholder="Enter Password">
+      <input id="input-password" type="password" class="form-control" formControlName="password" placeholder="Enter Password">
     </div>
     <div class="d-flex justify-content-between">
-      <button type="submit" class="btn btn-primary m-1">Submit</button>
-      <button type="button" routerLink="/register" class="btn btn-primary m-1">Register</button>
+      <button id="button-login" type="submit" class="btn btn-primary m-1">Submit</button>
+      <button id="button-register" type="button" routerLink="/register" class="btn btn-primary m-1">Register</button>
     </div>
   </form>
 </div>
