--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" routerLink="/chat">My Rooms</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/room">Rooms</a>
+                    <a id="nav-rooms" class="nav-link" routerLink="/room">Rooms</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/login" (click)="logout()" class="nav-link">Logout</a>
